--- a/index.html
+++ b/index.html
@@ -43,24 +43,14 @@
         </div>
         <div class="row">
           <div class="col-xs-3">
-            <img class="img" src="assets/images/me2.jpeg" alt="Dee Ann Scanniello" height="250px" width="200px">
+            <img class="img" src="Assets/Images/Me2.jpeg" alt="Dee Ann Scanniello" height="250px" width="200px">
           </div>
           <div class="col-xs-9">
-           <p> My name is Dee Ann Scanniello. I was born in South Dakota, and raised
-            in Anaconda, Montana. When I graducated high school I moved to Phoenix, AZ
-            to attend DeVry University to earn a degree as an Electronics Engineer. While
-            going to school there I worked at ABC Diaper servie washing and folding
-            dirty baby diapers. But, as life would have it, a degree in Electronic
-            Engineering wasn't happening due to financial difficulties, so I had to
-            drop out of school and went to work for FotoMat.  After waiting 2 years or
-            so I finally made a decision to go back to school and went to Miller
-            Institute were I got my diploma as an Electronic Technician. After graduating
-            I went work for Tegal Corporation. A semiconductor Etching equipment company
-            as a Field Service Engineer.</p>
+           <p> My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graducated high school I moved to Phoenix, AZ to attend DeVry University to earn a degree as an Electronics Engineer. While going to school there I worked at ABC Diaper servie washing and folding dirty baby diapers. But, as life would have it, a degree in Electronic
+            Engineering wasn't happening due to financial difficulties, so I had to drop out of school and went to work for FotoMat.  After waiting 2 years or so I finally made a decision to go back to school and went to Miller Institute were I got my diploma as an Electronic Technician. After graduating I went work for Tegal Corporation. A semiconductor Etching equipment company as a Field Service Engineer.</p>
           
 
-          <p>I worked in the Semiconductor industry for approximately 15 years, eventually
-            moving my way up to a Process Technician position at Motorla.  This was a very rewarding job, as I was able to design experiments and come up with processes that were actually used in the manufacturing of semiconductors. I would write the specifications for the processing procedures, maintenance procedures, operator procedures and tests, all related to the process I created.</p>
+          <p>I worked in the Semiconductor industry for approximately 15 years, eventually moving my way up to a Process Technician position at Motorla.  This was a very rewarding job, as I was able to design experiments and come up with processes that were actually used in the manufacturing of semiconductors. I would write the specifications for the processing procedures, maintenance procedures, operator procedures and tests, all related to the process I created.</p>
           </div>
         </div>
 
