finally got words to wrap around image on index page.

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
 
-  <box class="contact">
+  <!-- <box class="contact"> -->
     <div class="container">
     <div class="row" id="straight-line">
       <div class="col-xs-12">
@@ -58,7 +58,7 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
-</box>
+<!-- </box> -->
 
   
 </body>
