--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
 
-  <div class="container" >
+  <div class="container" id="portfolio">
     <div class=row id="straight-line">
       <div class="col-xs-12" >
         <h2>Portfolio</h2>
@@ -49,7 +49,7 @@
          </div>  
       </div>
       <div class="col-xs-6" id="portfolio-spacing">
-        <image class="img img-thumbnail" alt="Code Example" style="width:100%" src=https://support.postbox-inc.com/hc/en-us/article_attachments/115000113173/code-view-small_2x.png></image>
+        <image class="img img-thumbnail" alt="Code Example" src="Assets/Images/Me2.jpeg" height="250px" width="200px"></image>
       </div>
     </div>
   </div>
