--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+
+    <!-- Link to google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet"> 
-    <link
-  rel="stylesheet"
+  
+  <!-- Link to Bootstrap -->
+    <link rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"/>
-<link rel="stylesheet" href="./style.css"/>
+
+<!-- Link to personal style sheet -->
+  <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
+
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,45 +28,76 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
+
+          <!-- Link to About Me page -->
           <a class="nav-link" href="./index.html">About Me <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
+          <!-- Link to Portfolio page -->
           <a class="nav-link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
+          <!-- Link to Contact page -->
           <a class="nav-link" href="./contact.html">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <!-- <box class="contact"> -->
+  <!-- Container to hold the form in -->
     <div class="container">
     <div class="row" id="straight-line">
       <div class="col-xs-12">
         <h2>Contact</h2>
       </div>
     </div>
-    
+   
+    <!-- Start of the form -->
     <form>
-    
     <div class="form-group">
-      <label for="formGroupExampleInput">Name</label>
+      <div class="row">
+        <div class="col-xs-12">
+          <label for="formGroupExampleInput">Name</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
       <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
     </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">Email</label>
+  </div>
+    </div>   
+        <div class="form-group">
+          <div class="row">
+            <div class="col-xs-12">
+              <label for="formGroupExampleInput2">Email</label>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
       <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="example@gmail.com">
     </div>
+  </div>
+</div>
     <div class="form-group">
+      <div class="row">
+        <div class="col-xs-12">
       <label for="formGroupExampleInput3">Message</label>
+    </div>
+  </div>
+      <div class="row">
+        <div class="col-xs-12">
       <input type="text" class="form-control" id="formGroupExampleInput3">
     </div>
+  </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
     <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+</div>
+</div>
   </form>
 </div>
-<!-- </box> -->
-
   
 </body>
 </html>
