Added rows and columns to profile page. Added 2 more images.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <!-- We need to bring in the bootstrap CSS -->
+   <!--Link to google font  -->
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet"> 
-<link
+<!-- We need to bring in the bootstrap CSS --><link
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"/>
+  <!-- Link to personal style sheet -->
 <link rel="stylesheet" href="./style.css"/>
 
     <title>Dee Ann Scanniello Bio</title>
 </head>
 <body> 
+  <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!-- Name and link link to about me page on the navbar -->
         <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,8 +28,11 @@
           
           <div class="flex-row-reverse">
           <div class="navbar-nav">
+            <!-- Link to the About me page -->
             <a class="nav-item nav-link active" href="./index.html">About Me <span class="sr-only">(current)</span></a>
+            <!-- Link to the Portfolio page -->
             <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+            <!-- Link to the Contact page -->
             <a class="nav-item nav-link" href="./contact.html">Contact</a>
           </div>
         </div>
@@ -43,6 +49,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 pull-left">
+            <!-- Picture of myself and a couple of paragraphs about myself-->
             <p> <img class="img-responsive" src="Assets/Images/Me2.jpeg" alt="Dee Ann Scanniello">
           
            My name is Dee Ann Scanniello. I was born in South Dakota, and raised in Anaconda, Montana. When I graducated high school I moved to Phoenix, AZ to attend DeVry University to earn a degree as an Electronics Engineer. While going to school there I worked at ABC Diaper servie washing and folding dirty baby diapers. But, as life would have it, a degree in Electronic
@@ -59,8 +66,11 @@
         <div clas="row">
             <div class="col-xs-12">
                 <ul>
+                  <!-- Link to my email address so someone can email me. -->
                   <strong><li>Email: <a href="#">dazacher2000@yahoo.com</a> </li></strong>
+                  <!-- Link to my GitHub page -->
                   <strong><li>GitHub: <a href="https://github.com/dazacher" target="_blank">https://github.com/dazacher</a></li></strong>
+                  <!-- Link to my Portfolio page -->
                   <strong><li>Portfolio: <a href="./portfolio.html">Click Here</a></li></strong>
               </ul>
             </div>
