--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- Image on myself on the Navbar. Also a link back to the about me page. -->
     <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,19 +47,44 @@
   </nav>
 
  <div class="container" id="portfolio">
+   <!-- First picture on Portfolioi page. Eventuall will be a link to my first project -->
+   <div class="row">
+     <div class="col-xs-6">
               <div class="box1">
                 <img src="https://support.postbox-inc.com/hc/en-us/article_attachments/115000113173/code-view-small_2x.png"  alt="Responsive portfolio">
                 <div class="text">
                     <h5>Code Refactor</h5>
+                  </div>
                 </div>
             </div>
-
+<!-- Second picture on my profile page. Eventually will be a link to my second project. -->
+              <div class="col-xs-6">
               <div class="box2">
                 <img src="Assets/Images/Me2.jpeg" alt="Responsive portfolio">
                 <div class="text">
                     <h5>Responsive Portfolio</h5>
                 </div>
+               </div>
             </div>
+          </div>
+<!-- Third picture on my profile page. Eventually will be a link to my thrid project -->
+        <div class="row">
+          <div class="col-xs-6">
+            <div class="box3">
+              <img src="Assets/Images/Lilly2.jpeg" alt="Unknown">
+              <div class="text">
+                  <h5>Unknown</h5>
+              </div>
+          </div>
+          </div>
+          <div class="col-xs-6">
+            <div class="box4">
+              <img src="Assets/Images/Sierra_And_I2.jpeg" alt="Unknown">
+              <div class="text">
+                  <h5>Unknown</h5>
+              </div>
+          </div>
+          </div></div>
   </div>
     
 </body>
