--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- Image of myself in the navbar. Also a link back to the about me page. -->
     <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -54,18 +55,22 @@
    
     <!-- Start of the form -->
     <form>
+      <!-- Label and data entry box for the name of the person tyring to contact me -->
     <div class="form-group">
           <label for="formGroupExampleInput">Name</label>
       <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
     </div>   
+    <!-- Label and data entry box for the email address of the person trying to contact me -->
         <div class="form-group">
               <label for="formGroupExampleInput2">Email</label>
       <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="example@gmail.com">
 </div>
     <div class="form-group">
+      <!-- Label and data entry box for the message from the person who is tying to contact me -->
       <label for="formGroupExampleInput3">Message</label>
       <input type="text" class="form-control" id="formGroupExampleInput3">
     </div>
+    <!-- Submit button for the person to push to submit the data they wish to send to me -->
     <button type="submit" class="btn btn-primary">Submit</button>
 </div>
   </form>
