Added rows and columns to my contact page to make it responsive.

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
   </nav>
 
  <div class="container" id="portfolio">
-   <!-- First picture on Portfolioi page. Eventuall will be a link to my first project -->
+   <!-- First picture on Portfolio page. Eventualiy will be a link to my first project -->
    <div class="row">
      <div class="col-xs-6">
               <div class="box1">
@@ -57,7 +57,7 @@
                   </div>
                 </div>
             </div>
-<!-- Second picture on my profile page. Eventually will be a link to my second project. -->
+<!-- Second picture on my portfolio page. Eventually will be a link to my second project. -->
               <div class="col-xs-6">
               <div class="box2">
                 <img src="Assets/Images/Me2.jpeg" alt="Responsive portfolio">
@@ -67,16 +67,17 @@
                </div>
             </div>
           </div>
-<!-- Third picture on my profile page. Eventually will be a link to my thrid project -->
+<!-- Third picture on my portfolio page. Eventually will be a link to my thrid project -->
         <div class="row">
           <div class="col-xs-6">
             <div class="box3">
-              <img src="Assets/Images/Lilly2.jpeg" alt="Unknown">
+              <img src="Assets/Images/Lilly2.jpeg" alt="Password Generator">
               <div class="text">
-                  <h5>Unknown</h5>
+                  <h5>Password Generator</h5>
               </div>
           </div>
           </div>
+          <!-- Fourth picture on my portfolio page.  eventually will be a link to my fourth project-->
           <div class="col-xs-6">
             <div class="box4">
               <img src="Assets/Images/Sierra_And_I2.jpeg" alt="Unknown">
