--- a/contact.html
+++ b/contact.html
@@ -54,26 +54,31 @@
     </div>
    
     <!-- Start of the form -->
-    <form>
-      <!-- Label and data entry box for the name of the person tyring to contact me -->
-    <div class="form-group">
-          <label for="formGroupExampleInput">Name</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
-    </div>   
-    <!-- Label and data entry box for the email address of the person trying to contact me -->
-        <div class="form-group">
+    <div class="row">
+      <div class="col-xs-9">
+        <form>
+        <!-- Label and data entry box for the name of the person tyring to contact me -->
+          <div class="form-group">
+            <label for="formGroupExampleInput">Name</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
+          </div>   
+        <!-- Label and data entry box for the email address of the person trying to contact me -->
+           <div class="form-group">
               <label for="formGroupExampleInput2">Email</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="example@gmail.com">
-</div>
-    <div class="form-group">
-      <!-- Label and data entry box for the message from the person who is tying to contact me -->
-      <label for="formGroupExampleInput3">Message</label>
-      <input type="text" class="form-control" id="formGroupExampleInput3">
-    </div>
-    <!-- Submit button for the person to push to submit the data they wish to send to me -->
-    <button type="submit" class="btn btn-primary">Submit</button>
-</div>
-  </form>
+              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="example@gmail.com">
+            </div>
+          <div class="form-group">
+          <!-- Label and data entry box for the message from the person who is tying to contact me -->
+            <label for="formGroupExampleInput3">Message</label>
+            <input type="text" class="form-control" id="formGroupExampleInput3">
+          </div>
+        <!-- Submit button for the person to push to submit the data they wish to send to me -->
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+       </div>
+        <div class="col-xs-3"></div>
+  </div>
+
 </div>
   
 </body>
