Added comments to all the pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
                   <h5>Unknown</h5>
               </div>
           </div>
-          </div></div>
+          </div>
   </div>
     
 </body>
