Trying to get portfolio to align properly on phone, and contact page as well.

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="Assets/Images/favicon.ico" type="image/x-icon/">
     <title>Contact</title>
 
     <!-- Link to google fonts -->
@@ -45,20 +46,21 @@
     </div>
   </nav>
 
-  <!-- Container to hold the form in -->
+  <!-- Container to hold the line and Contact header in -->
     <div class="container">
     <div class="row" id="straight-line">
       <div class="col-xs-12">
         <h2>Contact</h2>
       </div>
     </div>
-   
+  </container>
+  <!-- Put form in a container -->
+   <container>   
     <!-- Start of the form -->
-    <div class="row">
-      <div class="col-xs-9">
         <form>
         <!-- Label and data entry box for the name of the person tyring to contact me -->
-          <div class="form-group">
+        <div class="row">
+          <div class="col=xs-9"><div class="form-group">
             <label for="formGroupExampleInput">Name</label>
             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
           </div>   
@@ -74,9 +76,12 @@
           </div>
         <!-- Submit button for the person to push to submit the data they wish to send to me -->
           <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-       </div>
+        </div>
         <div class="col-xs-3"></div>
+      </div>
+    </div>
+        </form>          
+      </container>
   </div>
 
 </div>
