--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="Assets/Images/favicon.ico" type="image/x-icon/">
     <title>Portfolio</title>
 
     <!-- Link for google font -->
@@ -49,7 +49,7 @@
  <div class="container" id="portfolio">
    <!-- First picture on Portfolio page. Eventualiy will be a link to my first project -->
    <div class="row">
-     <div class="col-xs-6">
+     <div class="col-s-6 col-xs-12">
               <div class="box1">
                 <img src="https://support.postbox-inc.com/hc/en-us/article_attachments/115000113173/code-view-small_2x.png"  alt="Responsive portfolio">
                 <div class="text">
@@ -58,7 +58,7 @@
                 </div>
             </div>
 <!-- Second picture on my portfolio page. Eventually will be a link to my second project. -->
-              <div class="col-xs-6">
+              <div class="col-s-6 col-xs-12">
               <div class="box2">
                 <img src="Assets/Images/Me2.jpeg" alt="Responsive portfolio">
                 <div class="text">
@@ -69,7 +69,7 @@
           </div>
 <!-- Third picture on my portfolio page. Eventually will be a link to my thrid project -->
         <div class="row">
-          <div class="col-xs-6">
+          <div class="col-s-6 col-xs-12">
             <div class="box3">
               <img src="Assets/Images/Lilly2.jpeg" alt="Password Generator">
               <div class="text">
@@ -78,7 +78,7 @@
           </div>
           </div>
           <!-- Fourth picture on my portfolio page.  eventually will be a link to my fourth project-->
-          <div class="col-xs-6">
+          <div class="col-s-6 col-xs-12">
             <div class="box4">
               <img src="Assets/Images/Sierra_And_I2.jpeg" alt="Unknown">
               <div class="text">
