--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="Assets/Images/favicon.ico" type="image/x-icon/">
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -77,5 +78,5 @@
           </div>
     </div>
   </body>
-  
+
 </html>
