Trying to figure out how to get my profile images to be responsive.

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,8 @@
         <form>
         <!-- Label and data entry box for the name of the person tyring to contact me -->
         <div class="row">
-          <div class="col=xs-9"><div class="form-group">
+          <div class="col=xs-9">
+            <div class="form-group">
             <label for="formGroupExampleInput">Name</label>
             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
           </div>   
