--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
  <div class="container" id="portfolio">
    <!-- First picture on Portfolio page. Eventualiy will be a link to my first project -->
    <div class="row">
-     <div class="col-s-6 col-xs-12">
+     <div class="col-sm-6 col-xs-12">
       
       
       <div class="box5">
@@ -73,7 +73,7 @@
                 </div>
             </div>
 <!-- Second picture on my portfolio page. Eventually will be a link to my second project. -->
-              <div class="col-s-6 col-xs-12">
+              <div class="col-sm-6 col-xs-12">
               <div class="box2">
                 <img src="Assets/Images/Me2.jpeg" alt="Responsive portfolio">
                 <div class="text">
@@ -84,7 +84,7 @@
           </div>
 <!-- Third picture on my portfolio page. Eventually will be a link to my thrid project -->
         <div class="row">
-          <div class="col-s-6 col-xs-12">
+          <div class="col-sm-6 col-xs-12">
             <div class="box3">
               <img src="Assets/Images/Lilly2.jpeg" alt="Password Generator">
               <div class="text">
@@ -93,7 +93,7 @@
           </div>
           </div>
           <!-- Fourth picture on my portfolio page.  eventually will be a link to my fourth project-->
-          <div class="col-s-6 col-xs-12">
+          <div class="col-sm-6 col-xs-12">
             <div class="box4">
               <img src="Assets/Images/Sierra_And_I2.jpeg" alt="Unknown">
               <div class="text">
