--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
           <a class="nav-link" href="./index.html">About Me <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <!-- Link to Portfolio Page -->
-          <a class="nav-link" href="./Dee_Ann_Scanniello_Resume.html">Resume</a>
+          <!-- Link to Resume PDF Page -->
+          <a class="nav-item nav-link" href="./Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Resume</a>
         </li>
         <li class="nav-item">
           <!-- Link to Portfolio Page -->
