Made a few comment changes.

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,8 @@
           <div class="text">
             <h5>Trivia with Friends</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor1" href="https://dazacher.github.io/Trivia-With-Friends/" target="_blank">Deployed Website</a><br>
+            <a id="anchor1" href="https://dazacher.github.io/Trivia-With-Friends/" target="_blank">Deployed
+              Website</a><br>
             <a id="anchor2" href="https://github.com/dazacher/Trivia-With-Friends" target="_blank">GitHub Code</a>
           </div>
         </div>
@@ -71,7 +72,8 @@
           <div class="text">
             <h5>Weather Dashboard</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor3" href="https://dazacher.github.io/Weather-Dashboard/" target="_blank">Deployed Website</a><br>
+            <a id="anchor3" href="https://dazacher.github.io/Weather-Dashboard/" target="_blank">Deployed
+              Website</a><br>
             <a id="anchor4" href="https://github.com/dazacher/Weather-Dashboard" target="_blank">GitHub Code</a>
           </div>
         </div>
@@ -85,7 +87,8 @@
           <div class="text">
             <h5>Password Generator</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor5" href="https://dazacher.github.io/Password-Generator/" target="_blank">Deployed Website</a><br>
+            <a id="anchor5" href="https://dazacher.github.io/Password-Generator/" target="_blank">Deployed
+              Website</a><br>
             <a id="anchor6" href="https://github.com/dazacher/Password-Generator" target="_blank">GitHub Code</a>
           </div>
         </div>
@@ -102,23 +105,24 @@
           </div>
         </div>
       </div>
-      <!-- Link to my first project -->
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <div class="box5">
-          <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler"><br>
-          <div class="text">
-            <h5>Work Day Scheduler</h5>
-            <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor9" href="https://dazacher.github.io/Work_Day_Scheduler/" target="_blank">Deployed Website</a><br>
-            <a id="anchor10" href="https://github.com/dazacher/Work_Day_Scheduler" target="_blank">GitHub Code</a>
+      <!-- Link to my fifth picture -->
+      <div class="row">
+        <div class="col-sm-6 col-xs-12">
+          <div class="box5">
+            <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler"><br>
+            <div class="text">
+              <h5>Work Day Scheduler</h5>
+              <!-- Links to GitHub deployed website and github code -->
+              <a id="anchor9" href="https://dazacher.github.io/Work_Day_Scheduler/" target="_blank">Deployed
+                Website</a><br>
+              <a id="anchor10" href="https://github.com/dazacher/Work_Day_Scheduler" target="_blank">GitHub Code</a>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- Second picture on my portfolio page. -->
-      <div class="col-sm-6 col-xs-12">
-        <div class="box6">
-          <!-- <img src="./Assets/Images/Lilly2.jpeg" alt="Lilly">
+        <!-- Sixth picture on my portfolio page. -->
+        <div class="col-sm-6 col-xs-12">
+          <div class="box6">
+            <!-- <img src="./Assets/Images/Lilly2.jpeg" alt="Lilly">
           <div class="text">
             <h5>Unknown</h5>
             Links to GitHub deployed website and github code -->
@@ -128,8 +132,7 @@
         </div>
       </div>
     </div>
-    
-    </div>
+  </div>
 </body>
 
 </html>
