Used icons instead of words for contact info.

--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
           <ul>
             <!-- Link to my email address so someone can email me. -->
             <strong>
-              <li>Email: <a href="#">dazacher2000@yahoo.com</a> </li>
+              <li><img class="indexImages" src="./Assets/Images/email.png"><a href="#">dazacher2000@yahoo.com</a> </li>
             </strong>
             <!-- Link to my GitHub page -->
             <strong>
-              <li>GitHub: <a href="https://github.com/dazacher" target="_blank">https://github.com/dazacher</a></li>
+              <li><img class="indexImages" src="./Assets/Images/GitHub2.png"><a href="https://github.com/dazacher" target="_blank"> https://github.com/dazacher</a></li>
             </strong>
             <!-- Link to my Resume page -->
             <strong>
-              <li>Resume: <a href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Dee Ann Scanniello</a></li>
+              <li><img class="indexImages" src="./Assets/Images/resume.png"><a href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Dee Ann Scanniello</a></li>
             </strong>
             <!-- Link to my LinkedIn page -->
             <strong>
-              <li>LinkedIn: <a href="https://linkedin.com/in/deeannscanniello" target="_blank">Dee Ann Scanniello</a></li>
+              <li><img class="indexImages" src="./Assets/Images/linkedin2.png"> <a href="https://linkedin.com/in/deeannscanniello" target="_blank"> Dee Ann Scanniello</a></li>
             </strong>
           </ul>
         </div>
