--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <ul>
             <!-- Link to my email address so someone can email me. -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/email.png"><a href="#">dazacher2000@yahoo.com</a> </li>
+              <li><img class="indexImages" src="./Assets/Images/email.png"><a href="#"> dazacher2000@yahoo.com</a> </li>
             </strong>
             <!-- Link to my GitHub page -->
             <strong>
@@ -90,11 +90,11 @@
             </strong>
             <!-- Link to my Resume page -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/resume.png"><a href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Back_End.pdf">Dee Ann Scanniello</a></li>
+              <li><img class="indexImages" src="./Assets/Images/resume.png"><a href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Back_End.pdf"> Dee Ann Scanniello</a></li>
             </strong>
             <!-- Link to my LinkedIn page -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/linkedin2.png"> <a href="https://linkedin.com/in/deeannscanniello" target="_blank"> Dee Ann Scanniello</a></li>
+              <li><img class="indexImages" src="./Assets/Images/linkedin2.png"> <a href="https://linkedin.com/in/deeannscanniello" target="_blank"> https://www.linkedin.com/in/deeannscanniello/</a></li>
             </strong>
           </ul>
         </div>
