Got my hamburger working.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <!-- We need to bring in the bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
   <!-- Link to personal style sheet -->
   <link rel="stylesheet" href="./style.css" />
 
@@ -70,7 +79,17 @@
           Technician position at Motorla. This was a very rewarding job, as I was able to design experiments and come up
           with processes that were actually used in the manufacturing of semiconductors. I would write the
           specifications for the processing procedures, maintenance procedures, operator procedures and tests, all
-          related to the process I created. Eventuall, I realized this just wasn't the career I had dreamed about. I wanted to program computers, so I went back to school at DeVry University and got a bachelors degree in Computer Information Sytems. I worked for about 4 years coding in Ada at Performance Software. Ada is a languare used for the aircraft industry. I realized this just wasn't what I was looking for, so I went to work for Risk Placement Sercives. I did a lot of SQL and some C# programming here. I really enjoyed doing this.  After 4 years here, my husband at the time, thought I should quit working and become a stay at home mom and raise our than 2 year old daughter. It would save us a lot of money, and also we wouldn't have another person raising our child. After the divorce, I realized I wanted to go back to work and get into the field of work I wanted to be in when I graduated from DeVry... Web Development, so I decided to go back to school at University of Arizona Bootcamp for Full Stack Web Development. I truly love to code, and enjoy the challenges that it brings. </p>
+          related to the process I created. Eventuall, I realized this just wasn't the career I had dreamed about. I
+          wanted to program computers, so I went back to school at DeVry University and got a bachelors degree in
+          Computer Information Sytems. I worked for about 4 years coding in Ada at Performance Software. Ada is a
+          languare used for the aircraft industry. I realized this just wasn't what I was looking for, so I went to work
+          for Risk Placement Sercives. I did a lot of SQL and some C# programming here. I really enjoyed doing this.
+          After 4 years here, my husband at the time, thought I should quit working and become a stay at home mom and
+          raise our than 2 year old daughter. It would save us a lot of money, and also we wouldn't have another person
+          raising our child. After the divorce, I realized I wanted to go back to work and get into the field of work I
+          wanted to be in when I graduated from DeVry... Web Development, so I decided to go back to school at
+          University of Arizona Bootcamp for Full Stack Web Development. I truly love to code, and enjoy the challenges
+          that it brings. </p>
       </div>
     </div>
     <div class="row">
@@ -86,15 +105,19 @@
             </strong>
             <!-- Link to my GitHub page -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/GitHub2.png"><a href="https://github.com/dazacher" target="_blank"> https://github.com/dazacher</a></li>
+              <li><img class="indexImages" src="./Assets/Images/GitHub2.png"><a href="https://github.com/dazacher"
+                  target="_blank"> https://github.com/dazacher</a></li>
             </strong>
             <!-- Link to my Resume page -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/resume.png"><a href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Back_End.pdf"> Dee Ann Scanniello</a></li>
+              <li><img class="indexImages" src="./Assets/Images/resume.png"><a
+                  href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Back_End.pdf"> Dee Ann Scanniello</a></li>
             </strong>
             <!-- Link to my LinkedIn page -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/linkedin2.png"> <a href="https://linkedin.com/in/deeannscanniello" target="_blank"> https://www.linkedin.com/in/deeannscanniello/</a></li>
+              <li><img class="indexImages" src="./Assets/Images/linkedin2.png"> <a
+                  href="https://linkedin.com/in/deeannscanniello" target="_blank">
+                  https://www.linkedin.com/in/deeannscanniello/</a></li>
             </strong>
           </ul>
         </div>
